--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -1,46 +1,47 @@
 .home-page {
+    margin: 0;
+    font-family: Arial, sans-serif;
     background-color: #eeeeee;
+}
 
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
+.home-page {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     color: white;
 }
 
 img {
-    width: 350px;
-    height: 380px;
+    width: 400px;
+    height: 450px;
     margin-top: 100px;
-}
-
-.home-page {
-    font-family: Arial, sans-serif;
 }
 
 .main-content {
     display: flex;
-    justify-content: space-between;
-    padding: 20px;
-}
-
-
-.intro-text {
-    margin-bottom: 20px;
-
-}
-
-.search-bar {
-    display: flex;
+    flex-direction: column;
     align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.right-content {
+    width: 100%;
+    max-width: 600px;
+    /* Adjust the max-width as needed */
+    margin-top: 20px;
+    /* Add margin for spacing */
+}
+
+.intro-text,
+.search-bar {
     margin-bottom: 20px;
 }
 
 .search-bar input {
     flex: 1;
     padding: 10px;
-
+    box-sizing: border-box;
 }
 
 .search-bar button {
@@ -49,6 +50,9 @@ img {
     cursor: pointer;
 }
 
-.right-content {
-    width: 40%;
+@media (min-width: 768px) {
+    .main-content {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
