--- a/src/components/login.module.css
+++ b/src/components/login.module.css
@@ -175,7 +175,7 @@ height: 530px;
 
 }
 .pic{
-background-image: url('../../public/BG Image.png');
+background-image: url('/BG Image.png');
 background-repeat: no-repeat;
 background-attachment: fixed; 
 background-size: 100% 100%;
