--- a/src/components/login.module.css
+++ b/src/components/login.module.css
@@ -5,30 +5,37 @@
   padding-top: 25px;
   align-items: center;
   display: flex;
-  
-  
-  
+
+
+
 }
 
-.body{
+.pageContainer {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.body {
   font-family: "Times New Roman", Times, serif;
+
 }
 
-.topnav a { 
+.topnav a {
   color: white;
   padding: 20px 16px;
   text-decoration: none;
   font-size: 17px;
   font-weight: bold;
   border-radius: 15px;
- 
+
 }
 
 
 .topnav a:hover {
   background-color: #ddd;
   color: white;
-  margin-left: 10px; 
+  margin-left: 10px;
 }
 
 
@@ -36,22 +43,23 @@
   background-color: #657EFC;
   color: white;
   font-weight: bold;
-  
+
 }
 
 
-.h1{
+.h1 {
   color: #6F6AA4;
   float: left;
   padding-left: 50px;
- margin-top: -1.5px;
- padding-top: 30px;
- 
+  margin-top: -1.5px;
+  padding-top: 30px;
+
 }
 
-.blueBox{
+.blueBox {
 
-  background-color: #657EFC; /* Set the background color to blue */
+  background-color: #657EFC;
+  /* Set the background color to blue */
   color: white;
   text-align: center;
   line-height: 1;
@@ -61,40 +69,41 @@
   float: left;
   margin-top: 5%;
   border-radius: 25px;
-  margin-left: -170px;
+  margin-left: 24%;
 }
 
-.input{
-width: 100%;
-padding: 12px 20px;
-margin: 8px 0;
-display: inline-block;
-border: 1px solid #ccc;
-box-sizing: border-box;
-width: 200px;
-background-color: white;
-border-radius: 15px;
-margin-right: 30px;
-line-height: 0.1;
-padding-left: 30px;
+.input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  width: 200px;
+  background-color: white;
+  border-radius: 15px;
+  margin-right: 30px;
+  line-height: 0.1;
+  padding-left: 30px;
 
 
 }
 
 
-.container{
+.container {
 
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox;
+  /* IE10 */
   display: flex;
   width: 100%;
   margin-bottom: 25px;
-  
-  
+
+
 
 }
 
 
-.gog{
+.gog {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -109,9 +118,10 @@ padding-left: 30px;
   border-radius: 25px;
   margin-top: 1px;
   margin-right: 18px;
-  
+
 }
-.log{
+
+.log {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -127,17 +137,18 @@ padding-left: 30px;
   margin-top: 1px;
   margin-right: 18px;
   color: white;
-  
-  
+
+
 }
 
-.icon{
-  color:#657EFC;
+.icon {
+  color: #657EFC;
   padding-left: -10px;
- 
 
-  }
-.h3{
+
+}
+
+.h3 {
   margin-top: 3%;
   margin-bottom: 2px;
   color: white;
@@ -145,67 +156,86 @@ padding-left: 30px;
 
 }
 
-.h4{
+.h4 {
   margin-left: 70px;
   font-size: 13px;
   padding-bottom: -10px;
   margin-top: 1px;
- margin-left: 6px;
- text-decoration: none;
-  
+  margin-left: 6px;
+  text-decoration: none;
+
 
 }
-.h2{
+
+.h2 {
   margin-left: 4px;
+  color: white;
 }
-.h4 a{
+
+.h4 a {
   color: white;
   text-decoration: none;
 }
-.frame{
+
+.frame {
   border-radius: 5px;
-background-color: #f1eeee3b;
-margin-top: 0px;
-padding-top: -50px;
-margin-left: 150px;
-margin-right: 150px;
-max-width: 700px;
-opacity: 0.9;
-height: 530px;
+  background-color: #f1eeee3b;
+  margin-top: 0px;
+  padding-top: -50px;
+  margin-left: 150px;
+  margin-right: 150px;
+  max-width: 700px;
+  opacity: 0.9;
+  height: 530px;
 
 }
-.pic{
-background-image: url('/BG Image.png');
-background-repeat: no-repeat;
-background-attachment: fixed; 
-background-size: 100% 100%;
-width: 100%;
-padding-top: 32px;
-padding-bottom: 70px;
+
+
+
+.pic {
+  background-image: url('/BG Image.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
+  /* Set a minimum height to fill the viewport */
+  display: flex;
+  flex-direction: column;
+  color: white;
+  position: relative;
+  background-size: 100% 100%;
+  padding-top: 72px;
+  padding-bottom: 70px;
 
 }
 
 @media screen and (max-width: 768px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a{
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .topnav a {
     text-align: center;
     float: left;
-    
-    
+
+
   }
 }
 
 
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  
+  .topnav.responsive {
+    position: relative;
+  }
+
   .topnav.responsive a {
     float: left;
     position: absolute;
     right: 0;
-    top: 0;  
-    
+    top: 0;
+
   }
 }
 
@@ -217,50 +247,48 @@ padding-bottom: 70px;
     padding-bottom: 10px;
     margin-left: 75px;
     margin-right: 75px;
-    max-width: 100%; /* Use a percentage for maximum width on smaller screens */
+    max-width: 100%;
+    /* Use a percentage for maximum width on smaller screens */
     opacity: 0.9;
-   
+
   }
-  .pic{
+
+  .pic {
     padding-bottom: 5px;
   }
+
   .blueBox {
     float: left;
     margin-left: 50px;
     max-width: 100%;
-}
+  }
 }
 
 @media screen and (max-width: 660px) {
-.topnav a{
-display: none;
-}
-.frame{
-margin-right: 40px;
-margin-left: 40px;
-}
-.pic{
-  padding-bottom: 5px;
+  .topnav a {
+    display: none;
+  }
+
+  .frame {
+    margin-right: 40px;
+    margin-left: 40px;
+  }
+
+  .pic {
+    padding-bottom: 5px;
   }
 
 }
 
 @media screen and (max-width: 560px) {
-.blueBox{
- max-width: 100%;
- margin-right: 10px;
- 
- 
+  .blueBox {
+    max-width: 100%;
+    margin-right: 10px;
+
+
+  }
+
+  .pic {
+    padding-bottom: 5px;
+  }
 }
-.pic{
-  padding-bottom: 5px;
-}
-}
-
-
-
-
-
-
-
-
