--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -12,6 +12,7 @@ body {
   text-align: center;
   margin-top: 10px;
   height: 200px;
+  padding-top: 10px;
 }
 
 
@@ -52,7 +53,7 @@ body {
 .waveHand {
   width: 50px;
   height: 50px;
-  margin-top: 12%;
+  margin-top: 5%;
 }
 
 h3 {
@@ -72,11 +73,17 @@ p {
   font-size: 15px;
   text-align: center;
   margin-top: 5px;
+  color:#fff;
 }
 
 .Topic {
-  font-size: 25px;
-  margin-bottom: 10px;
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+.topic_2 {
+  font-size: 14px;
+margin-top: 20px;
+  color: #fff;
 }
 
 .input-box input {
@@ -89,8 +96,8 @@ p {
   font-size: 12px;
   background-color: #fff;
   padding: 10px;
-  margin-bottom: 10px;
-  margin-top: 5px;
+  margin-bottom: 15px;
+
 }
 
 .input-box input::placeholder {
@@ -109,7 +116,7 @@ p {
   font-size: 12px;
   background-color: #fff;
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .input-email input::placeholder,
@@ -280,6 +287,7 @@ p {
   margin-top: 20px;
 }
 
+
 @media screen and (max-width: 768px) {
   .navbar {
     flex-direction: row;
@@ -307,3 +315,12 @@ p {
     display: none;
   }
 }
+@media screen and (max-width: 560px){
+  .left-links{
+   font-size: small;
+  }
+  .right-links{
+    display: none;
+  }
+  
+  }
