--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -19,6 +19,7 @@
 .welcome_text {
     color: #626193;
     font-size: 50px;
+    text-align: left;
 
 }
 
@@ -84,9 +85,67 @@ img {
     cursor: pointer;
 }
 
+
 @media (min-width: 768px) {
     .main-content {
         flex-direction: row;
         justify-content: space-between;
     }
+}
+
+
+.error-message {
+    color: red;
+    margin-top: 5px;
+}
+
+.video-box {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.video-area {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    position: relative;
+    text-align: center;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    outline: none;
+    color: #333;
+}
+
+.close-button:hover {
+    background-color: #333;
+    color: #fff;
+}
+
+
+.video-area video {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    outline: none;
+}
+
+.searched-word {
+    color: #333;
+    margin-top: 10px;
 }
