--- a/frontend/src/components/Lessons.css
+++ b/frontend/src/components/Lessons.css
@@ -1,39 +1,40 @@
-body {
-  background-color: white;
-}
-
-.container {
+.lesson-bg{
+  background-color:white;  
+} 
+.lesson-container{
   max-width: 1200px;
   width: 100%;
   margin: auto;
-  padding: 0px 20px;
+  padding:0px 20px;  
 }
-
-.lessons-section {
+.lesson-section{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-.topic {
+.lesson-h{
   font-size: 60px;
-  font-family: Georgia;
+  font-family:Georgia;
   text-align: center;
   color: skyblue;
-  background-color: rgb(0, 53, 139);
-
+  background-color: rgb(0, 53, 139);  
+}
+.level{
+  text-align: center;
+  font-family:sans-serif;
+  color: rgb(0, 53, 139);
+  margin-top: 10px;
+  font-size: 20px;
 }
 
-
-.cards {
+.lessonCards{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 80px;
+  margin-top:80px;  
 }
-
-.card {
+.lessonCard{
   flex: 0 0 calc(33.33% - 20px);
   max-width: calc(33.33% - 20px);
   width: 100%;
@@ -43,16 +44,13 @@ body {
   margin-bottom: 30px;
   transition: .3s;
   border: 2px solid transparent;
+  
 }
-
-.card:hover {
+.lessonCard:hover{
   border-color: rgb(0, 53, 139);
 }
-
-.btn {
+.level-btn{
   border: none;
-  /*outline: none;*/
-  text-decoration: none;
   background: rgb(0, 53, 139);
   color: lightblue;
   border-radius: 10px;
@@ -67,31 +65,21 @@ body {
   transition: .3s;
   border: 2px solid rgb(0, 53, 139);
   font-weight: bold;
-
-
-
-
 }
-
-.btn:hover {
+.level-btn:hover{
   background: lightblue;
   color: rgb(0, 53, 139);
-  text-decoration: none;
 }
-
-@media(max-width: 600px) {
-
-  .card {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
-}
-
-@media(max-width: 720px) {
-
-  .card {
-    flex: 0 0 calc(50% - 20px);
-    max-width: calc(50% - 40px);
+@media(max-width:900px){  
+  .lessonCard{
+    flex: 0 0 calc(50% - 15px);
+    max-width: calc(50% - 15px);
     width: 100%;
   }
+}
+@media(max-width: 600px){  
+  .lessonCard{
+    flex:  0 0 calc(100%);
+    max-width: 100%;  
+  }  
 }
