--- a/frontend/src/components/Level1.css
+++ b/frontend/src/components/Level1.css
@@ -1,36 +1,37 @@
-.level1-bg{
-    background-color: #eeeeee; ;
-  }
+
   .level1h1{
     font-size: 45px;
     font-family:Times New Roman;
     text-align: center;
-    color: navy;  
+    color: navy;
+    margin-top: 10%;  
   }
   .level1h2{
     font-size: 23px;
     color:darkblue;
     margin-top: 18px;
-    margin-left: 10px;
+    text-align: left;
     margin-bottom: 30px;
   }
   .level1h3{
     font-size: 19px;
     color: black;
+    text-align: left;
   }
   .level1h3:hover{
     color:blue;
   }
   .level1h4{
-    font-size: 18px;
-    margin-left: 42px;
+    font-size: 19px;
+    text-align: left;
     margin-top: 10px;
+    margin-bottom: 3%;
     color: black;
   }
   .level1li{
     font-size: 16px;
     color: black;
-    margin-left: 40px;
+    text-align: left;
     font-weight: 550;
   }
   .level1li:hover{
@@ -63,6 +64,11 @@
   .qui1:hover{
     border-color:skyblue;
   }
+  .level1Image{
+    width: 100%;
+    height: 70%;
+    margin-top: 5%;
+  }
   .q1btn{
     background: skyblue;
     color: rgb(3, 3, 82);
@@ -79,7 +85,7 @@
     border: 2px solid skyblue;
     font-weight: bold;
     text-align: center;
-    margin-left: 33%;  
+    margin-left: 36%;  
   }
   .q1btn:hover{
     background:transparent;
@@ -91,10 +97,19 @@
     max-width: calc(50% - 15px);
     width: 100%;
     }
+    .level1h1{
+        margin-top: 15%;
+    }
+    .q1btn{
+        margin-left: 28%;
+    }
   }
   @media(max-width: 500px){
     .qui1{
       flex:  0 0 calc(100%);
       max-width: calc(75%);
-    } 
+    }
+    .level1h1{
+        margin-top: 20%;
+    }   
   }
