--- a/frontend/src/components/Level2.css
+++ b/frontend/src/components/Level2.css
@@ -1,22 +1,21 @@
-.level2-bg{
-    background-color:#eeeeee;
-  }
   .level2h1{
     font-size: 45px;
     font-family:Times New Roman;
     text-align: center;
-    color: navy;  
+    color: navy;
+    margin-top: 10%;  
   }
   .level2h2{
     font-size: 23px;
     color:darkblue;
     margin-top: 18px;
-    margin-left: 10px;
+    text-align: left;
     margin-bottom: 30px;
   }
   .level2li{
     font-size: 19px;
     color:black;
+    text-align: left;
     
   }
   .level2li:hover{
@@ -49,6 +48,11 @@
   .qui2:hover{
     border-color:skyblue;
   }
+  .level2Image{
+    width: 100%;
+    height: 70%;
+    margin-top: 5%;
+  }
   .q2btn{
     background:skyblue;
     color:rgb(3,3,82);
@@ -65,7 +69,7 @@
     border: 2px solid skyblue;
     font-weight: bold;
     text-align: center;
-    margin-left: 33%;  
+    margin-left: 36%;  
   }
   .q2btn:hover{
     background:transparent;
@@ -77,13 +81,23 @@
     max-width: calc(50% - 15px);
     width: 100%;
     }
+    .level2h1{
+        margin-top: 15%;
+    }
+    .q2btn{
+        margin-left: 28%;
+    }
   }
   @media(max-width: 500px){
     .qui2{
       flex:  0 0 calc(100%);
       max-width: calc(75%);
     } 
-  }
+    .level1h1{
+    margin-top: 20%;
+    } 
+}  
+  
 
 
 
