--- a/frontend/src/components/Level3.css
+++ b/frontend/src/components/Level3.css
@@ -1,29 +1,28 @@
-.level3-bg{
-    background-color:#eeeeee;
-  }
   .level3h1{
     font-size: 45px;
     font-family:Times New Roman;
     text-align: center;
-    color:navy;  
+    color:navy;
+    margin-top: 10%;  
   }
   .level3h2{
     font-size: 23px;
     color:darkblue;
     margin-top: 18px;
-    margin-left: 10px;
+    text-align: left;
     margin-bottom: 30px;
   }
   .level3h4{
     font-size: 18px;
-    margin-left: 42px;
+    text-align: left;
     margin-top: 10px;
     color: black;
+    margin-bottom: 3%;
   }
   .level3li{
     font-size: 16px;
     color: black;
-    margin-left: 40px;
+    text-align: left;
     font-weight: 550;
     
   }
@@ -57,6 +56,11 @@
   .qui3:hover{
     border-color:skyblue;
   }
+  .level3Image{
+    width: 100%;
+    height: 70%;
+    margin-top: 5%;
+  }
   .q3btn{
     background:skyblue;
     color:rgb(3,3,82);
@@ -73,7 +77,7 @@
     border: 2px solid skyblue;
     font-weight: bold;
     text-align: center;
-    margin-left: 33%;  
+    margin-left: 36%;  
   }
   .q3btn:hover{
     background:transparent;
@@ -85,12 +89,21 @@
     max-width: calc(50% - 15px);
     width: 100%;
     }
+    .level3h1{
+        margin-top: 15%;
+    }
+    .q3btn{
+        margin-left: 28%;
+    }
   }
   @media(max-width: 500px){
     .qui3{
       flex:  0 0 calc(100%);
       max-width: calc(75%);
-    } 
+    }
+    .level1h1{
+        margin-top: 20%;
+    }  
   }
 
 
