--- a/frontend/src/components/Level2.css
+++ b/frontend/src/components/Level2.css
@@ -11,11 +11,13 @@
     margin-top: 18px;
     text-align: left;
     margin-bottom: 30px;
+    padding-left: 1%;
   }
   .level2li{
     font-size: 19px;
     color:black;
     text-align: left;
+    padding-left: 2%;
     
   }
   .level2li:hover{
