--- a/frontend/src/components/Level4.css
+++ b/frontend/src/components/Level4.css
@@ -80,12 +80,21 @@
     max-width: calc(50% - 15px);
     width: 100%;
     }
+    .level4h1{
+        margin-top: 15%;
+    }
+    .q4btn{
+        margin-left: 28%;
+    }
   }
   @media(max-width: 500px){
     .qui4{
       flex:  0 0 calc(100%);
       max-width: calc(75%);
-    } 
+    }
+    .level4h1{
+        margin-top: 20%;
+    }   
   }
 
 
