--- a/frontend/src/components/Level3.css
+++ b/frontend/src/components/Level3.css
@@ -2,31 +2,32 @@
     font-size: 45px;
     font-family:Times New Roman;
     text-align: center;
-    color:navy;
-    margin-top: 10%;  
+    color:skyblue;
+    margin-top: 10%; 
+    background-color: rgb(136, 0, 80); 
   }
   .level3h2{
     font-size: 23px;
     color:darkblue;
     margin-top: 18px;
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 3%;
     padding-left: 1%;
   }
   .level3h4{
     font-size: 18px;
     text-align: left;
-    margin-top: 10px;
+    margin-top: 3%;
     color: black;
-    margin-bottom: 2%;
-    padding-left: 2%;
+    margin-bottom: 3%;
+    padding-left: 4%;
   }
   .level3li{
     font-size: 16px;
     color: black;
     text-align: left;
     font-weight: 550;
-    padding-left: 3%;
+    padding-left: 4%;
 
     
   }
