--- a/frontend/src/components/Level5.css
+++ b/frontend/src/components/Level5.css
@@ -3,19 +3,23 @@
     font-size: 45px;
     font-family:Times New Roman;
     text-align: center;
-    color:navy;  
+    color:skyblue;
+    margin-top: 10%;
+    background-color: rgb(136, 0, 80);  
   }
   .level5h2{
     font-size: 23px;
     color:darkblue;
     margin-top: 18px;
-    margin-left: 10px;
-    margin-bottom: 30px;
+    text-align: left;
+    margin-bottom: 3%;
+    padding-left: 1%;
   }
   .level5li{
     font-size: 19px;
     color: black;
-    
+    text-align: left;
+    padding-left: 2%; 
   }
   .level5li:hover{
     color:blue;
@@ -47,6 +51,11 @@
   .qui5:hover{
     border-color:skyblue;
   }
+  .level5Image{
+    width: 100%;
+    height: 70%;
+    margin-top: 5%;
+  }
   .q5btn{
     background:skyblue;
     color:rgb(3,3,82);
@@ -63,7 +72,7 @@
     border: 2px solid skyblue;
     font-weight: bold;
     text-align: center;
-    margin-left: 33%;  
+    margin-left: 36%;  
   }
   .q5btn:hover{
     background:transparent;
@@ -75,12 +84,21 @@
     max-width: calc(50% - 15px);
     width: 100%;
     }
+    .level5h1{
+        margin-top: 15%;
+    }
+    .q5btn{
+        margin-left: 28%;
+    }
   }
   @media(max-width: 500px){
     .qui5{
       flex:  0 0 calc(100%);
       max-width: calc(75%);
-    } 
+    }
+    .level5h1{
+        margin-top: 20%;
+    }  
   }
 
 
