--- a/frontend/src/components/login.module.css
+++ b/frontend/src/components/login.module.css
@@ -21,7 +21,7 @@
 
 }
 
-.topnav a {
+.topnav a{
   color: white;
   padding: 20px 16px;
   text-decoration: none;
@@ -53,7 +53,7 @@
   padding-left: 50px;
   margin-top: -1.5px;
   padding-top: 30px;
-
+  font-size: 28px;
 }
 
 .blueBox {
@@ -79,12 +79,13 @@
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
-  width: 200px;
+  width: 220px;
   background-color: white;
   border-radius: 15px;
   margin-right: 30px;
   line-height: 0.1;
   padding-left: 30px;
+  margin-left: 20px;
 
 
 }
@@ -104,8 +105,8 @@
 
 
 .gog {
-  width: 100%;
-  padding: 12px 20px;
+  
+  padding: 12px 12px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
@@ -113,17 +114,18 @@
   box-sizing: border-box;
   margin-top: 20px;
   background-color: white;
-  width: 200px;
+  width: 180px;
   text-align: center;
   border-radius: 25px;
   margin-top: 1px;
   margin-right: 18px;
+  font-size: 12px;
 
 }
 
 .log {
   width: 100%;
-  padding: 12px 20px;
+  padding: 12px 12px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
@@ -137,6 +139,7 @@
   margin-top: 1px;
   margin-right: 18px;
   color: white;
+  font-size: 12px;
 
 
 }
@@ -163,6 +166,7 @@
   margin-top: 1px;
   margin-left: 6px;
   text-decoration: none;
+ 
 
 
 }
@@ -170,9 +174,10 @@
 .h2 {
   margin-left: 4px;
   color: white;
+  padding-bottom: 18px;
 }
 
-.h4 a {
+.h4a {
   color: white;
   text-decoration: none;
 }
@@ -282,8 +287,9 @@
 
 @media screen and (max-width: 560px) {
   .blueBox {
-    max-width: 100%;
-    margin-right: 10px;
+    max-width: 94%;
+    max-height: 80%;
+    margin-left: 9px;
 
 
   }
@@ -291,4 +297,44 @@
   .pic {
     padding-bottom: 5px;
   }
+  .h1{
+    font-size: 24px;
+    padding-left: 8px;
+  }
+  .input{
+    width: 160px;
+    margin-left: 18px;
+  }
+  .gog{
+    width: 100px;
+    font-size: 12px;
+    margin-left: 14px;
+  }
+  .log{
+    width: 100px;
+    font-size: 12px;
+    margin-left: 14px;
+  }
+  .h2{
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  .frame{
+    max-width: 100%;
+    
+  }
+  .h4{
+    font-size: 11px;
+    
+  }
+  .h4a{
+    color: white;
+  }
+  .h3{
+    font-size: 14px;
+  }
+  .pic{
+    background-size: 100% 100%;
+  }
+  
 }
