--- a/frontend/src/components/MainPage.css
+++ b/frontend/src/components/MainPage.css
@@ -11,8 +11,28 @@
 
 }
 
+.action-buttons {
+    /* Your existing styles */
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 1s, transform 1s;
+}
+
+.action-buttons.animate {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 .welcome-text {
     margin-top: 150px;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.5s, transform 1s;
+}
+
+.welcome-text.animate {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .wText {
@@ -27,10 +47,16 @@
 
 .signinbtn {
     background-color: #423fe5;
+
 }
 
 .dictionarybtn {
     background-color: #908fda;
+}
+
+.action-buttons button {
+    width: 100px;
+    font-size: 14px;
 }
 
 .signinbtn {
