--- a/frontend/src/components/ProfileInfo.css
+++ b/frontend/src/components/ProfileInfo.css
@@ -6,22 +6,26 @@
 }
 
 .profile-pic {
-    width: 100px;
-    height: 100px;
+    max-width: 200px;
+    /* Adjust maximum width as needed */
+    max-height: 200px;
+    /* Adjust maximum height as needed */
     border-radius: 50%;
     margin-bottom: 10px;
 }
 
 .user-info {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* Align items horizontally at the center */
 }
 
-.user-info h2 {
-    margin: 0;
-    color: black;
-}
-
-.user-info p {
+.userName,
+.userEmail {
     margin: 5px 0;
+    /* Adjust margin as needed */
     color: black;
 }
+
