--- a/frontend/src/components/MainPage.css
+++ b/frontend/src/components/MainPage.css
@@ -24,10 +24,11 @@
 }
 
 .welcome-text {
-    margin-top: 150px;
+    margin-top: 200px;
     opacity: 0;
     transform: translateY(-20px);
     transition: opacity 0.5s, transform 1s;
+    font-size: 25px;
 }
 
 .welcome-text.animate {
@@ -43,6 +44,9 @@
 .sText {
     margin-left: 25%;
     color: rgb(0, 0, 0);
+    font-size: 20px;
+    margin-top: 25px;
+    font-weight: bold;
 }
 
 .signinbtn {
