--- a/frontend/src/components/Quiz4.css
+++ b/frontend/src/components/Quiz4.css
@@ -112,3 +112,36 @@
     text-align: left;
     margin: 20px;
   }
+  .question-text{
+    cursor: pointer;
+  }
+  .video-container {
+    position: relative;
+    width: 330px; 
+    height: 250px; 
+    margin: 0 auto;
+}
+
+.video {
+    width: 100%;
+    height: 100%;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    background-color: #fff;
+    border: 1px solid #000;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.close-button:hover {
+    background-color: #0c0c0c;
+}
+
+/* Other existing styles remain unchanged */
+
